# salzburg-banner

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
alpinesight-app/: .env.local.template  .gitignore  GLOBE_SYSTEM.md  YOLO_CLIENT_SIDE.md  package.json  pnpm-lock.yaml  requirements.txt  vercel.json
alpinesight-app/api/: index.py  pyproject.toml
alpinesight-app/api/_utils/: tools.py
alpinesight-app/api/_utils/object_detection/: detect.py  fetch_image.py  obb.py  onnx_detector.py  run_func.py
alpinesight-app/api/utils/: stream.py
alpinesight-app/api/utils/object_detection/: detect.py  obb.py  run_anything.py  run_func.py
alpinesight-app/app/: layout.tsx
alpinesight-app/app/(chat)/: page.tsx
alpinesight-app/app/api/globe/geocode/: route.ts
alpinesight-app/app/api/vision-detect/: route.ts
alpinesight-app/app/api/wayback/: route.ts
alpinesight-app/components/: chat.tsx  globe-modal.tsx  icons.tsx  layout-wrapper.tsx  message.tsx  model-selector.tsx  multimodal-input.tsx  navbar.tsx  overview.tsx  satellite-image-viewer.tsx  tool-result.tsx
alpinesight-app/contexts/: globe-context.tsx
alpinesight-app/lambda/: Dockerfile  README.md  handler.py  requirements-lambda.txt
alpinesight-app/lib/: globe-tools.ts  multimodal-detection.ts  yolo-client.ts
